--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.5)
 project(ModernStandbyBluetoothOff VERSION 0.1.0)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(ModernStandbyBluetoothOff WIN32
-        tray.cpp
-        radio.cpp
-        main.cpp
-        resource.rc
+        src/tray.cpp
+        src/radio.cpp
+        src/main.cpp
+        res/resource.rc
         )
